third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/option_ext.stderr
error: Option::expect_or_abort() test
 --> tests/ui/option_ext.rs:3:1
  |
3 | option_ext!(one, two);
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `option_ext` (in Nightly builds, run with -Z macro-backtrace for more info)
