third_party/rust/chromium_crates_io/vendor/proc-macro-error2-v2/tests/ui/option_ext.rs
use test_crate::*;

option_ext!(one, two);

fn main() {}
